fix bg alignment on mobile

--- a/styles.css
+++ b/styles.css
@@ -75,8 +75,14 @@ nav {
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('./background.jpg');
     background-size: cover;
     background-position: center;
-    background-attachment: fixed;
+    background-repeat: no-repeat;
     color: #fff;
+}
+
+@media (min-width: 769px) {
+    #home {
+        background-attachment: fixed;
+    }
 }
 
 #home h1,
